correction css + dark mode

--- a/main.css
+++ b/main.css
@@ -6,13 +6,26 @@
     --color-text: #000;
     --color-text-secondary: #6c757d;
     --color-bg-secondary: #e9e9e9;
+    --color-fond-bouton-langue: #606870;
+    --color-fond-bouton-bascule: rgba(0,0,0,.1);
+    --color-text-bouton-bascule: rgba(0,0,0,0.5);
     --color-bg: #fff;
+    --color-texte-bouton: #fff;
     --font: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue","Arial",sans-serif;
     --hover-brightness: 1.2;
     --justify-important: center;
     --justify-normal: left;
 }
-
+@media (prefers-color-scheme: dark) {
+    :root {
+        --color-text: #ffffff;
+        --color-text-secondary: #cccccc;
+        --color-bg-secondary: #e9e9e9;
+        --color-bg: #212529;
+        --color-fond-bouton-bascule: rgba(255,255,255,.1);
+        --color-text-bouton-bascule: rgba(255,255,255,0.5);
+    }
+}
 body {
     color: var(--color-text);
     background-color: var(--color-bg);
@@ -23,6 +36,7 @@ body {
     margin-right: auto;
     margin-top: 1rem;
 }
+
 footer {
     margin: 1rem;
     font-size: 0.8rem;
@@ -47,14 +61,14 @@ h1 {
 }
 #titre-covid {
     background-color: var(--accent-1);
-    color: var(--color-bg);
+    color: var(--color-texte-bouton);
     text-transform: uppercase;
     margin: 0;
     padding: 0.1rem 0.5rem 0.1rem 0.5rem;
 }
 #titre {
     background-color: var(--accent-2);
-    color: var(--color-bg);
+    color: var(--color-texte-bouton);
     padding: 0.1rem 0.5rem 0.1rem 0.5rem;
 }
 .texte-aide {
@@ -69,10 +83,10 @@ h1 {
     text-decoration: none;        
 }
 .texte-aide > a:hover {
-    color: white;
+    color: var(--color-text);
     text-decoration: none;
-    background-color: #606870;
-    border-color: #606870;
+    background-color: var(--color-fond-bouton-langue);
+    border-color: var(--color-fond-bouton-langue);
 }
 .conteneur-formulaire {
     margin: 30px auto;
@@ -86,7 +100,7 @@ h1 {
 }
 a.bouton {
     text-decoration: none;
-    color: var(--color-bg);
+    color: var(--color-texte-bouton);
     border-radius: 15px;
     padding: 0.2em 0.4em 0.2em 0.4em;
     margin-left: 0.5em;
@@ -106,7 +120,7 @@ a.bouton {
     padding: 2px;
     border-radius: 15px;
     vertical-align: middle;
-    background: rgba(0,0,0,.1);
+    background: var(--color-fond-bouton-bascule);
 }
 .bouton-bascule > a {
     cursor: pointer;
@@ -115,7 +129,7 @@ a.bouton {
     border-radius: 16px;
     padding: 3px 10px;
     font-size: 12px;
-    color: rgba(0,0,0,0.5);
+    color: var(--color-text-bouton-bascule);
     line-height: 20px;
 }
 .bouton-bascule > a.actif {
@@ -127,7 +141,7 @@ a.bouton {
 
 button {
     background-color: var(--accent-1);
-    color: var(--color-bg);
+    color: var(--color-texte-bouton);
     font-size: 1.2rem;
     border: 1px solid var(--accent-1);
     text-align: center;
@@ -153,8 +167,6 @@ form {
     border-radius: var(--border-radius);
     box-shadow: var(--box-shadow) var(--color-shadow);
     display: block;
-    max-width: var(--width-card-wide);
-    min-width: var(--width-card);
     padding: 1.5rem;
     text-align: var(--justify-normal);
 }
@@ -170,7 +182,6 @@ select,
 textarea {
     display: block;
     font-size: inherit;
-    max-width: var(--width-card-wide);
     margin: 0.1rem;
 }
 
@@ -181,6 +192,8 @@ textarea {
     border-radius: var(--border-radius);
     margin-bottom: 1rem;
     padding: 0.4rem 0.8rem;
+    background-color: var(--color-bg);
+    color: var(--color-text);
 }
 
 input[readonly],
